@@ -1,6 +1,10 @@
 Changes to Version 2.0-3
 
-  o Updated Polisch translation (with thanks to Lukasz Daniel).
+  o Updated Polish translation (with thanks to Lukasz Daniel).
+
+  o titleLabel() to format a label in title font and color; exported for plug-ins.
+
+  o Small interface improvements.
 
 Changes to Version 2.0-2
 
